syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message SquareRootRequest {
    double number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc sum(SumRequest) returns (SumResponse) {};

    //error handling
    //This RPC will throw an exception if the sent number is negative
    rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}